--- a/Angular/Basico/Calculadora/angular.json
+++ b/Angular/Basico/Calculadora/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "calculadora1": {
+    "Calculadora": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/calculadora1",
+            "outputPath": "dist/calculadora",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -25,14 +25,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/jquery/dist/jquery.slim.min.js",
-              "node_modules/popper.js/dist/popper.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -65,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "calculadora1:build:production"
+              "browserTarget": "Calculadora:build:production"
             },
             "development": {
-              "browserTarget": "calculadora1:build:development"
+              "browserTarget": "Calculadora:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "calculadora1:build"
+            "browserTarget": "Calculadora:build"
           }
         },
         "test": {
@@ -101,6 +96,6 @@
     }
   },
   "cli": {
-    "analytics": "37c93a18-5182-4b62-ba88-05921ea0a427"
+    "analytics": "180ce973-7eb8-48a1-8a34-f39a0f12aa62"
   }
 }
