--- a/Angular/Ejercicios/control-clientes/package.json
+++ b/Angular/Ejercicios/control-clientes/package.json
@@ -14,11 +14,14 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.5.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
