--- a/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
+++ b/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
