--- a/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
+++ b/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
