Agregando endpoint de buscar por filtros

--- a/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
+++ b/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/BibliotecaApi.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.0.2" />
   </ItemGroup>
 
 </Project>
