--- a/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/Properties/launchSettings.json
+++ b/CSharp_DotNet/DemoProjects/BibliotecaApi/BibliotecaApi/Properties/launchSettings.json
@@ -4,6 +4,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+      "launchUrl": "swagger",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5262",
       "environmentVariables": {
@@ -13,6 +14,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
+      "launchUrl": "swagger",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7194;http://localhost:5262",
       "environmentVariables": {
